<resources>
    <string name="app_name">ShopApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="here">here</string>
    <string name="sign_in">Sign In</string>
    <string name="already_a_member">Already a member? </string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_up">Sing Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="my_feed">My Feed</string>
    <string name="learn_more">Learn More</string>
    <string name="error">Error</string>
    <string name="enter_valid_email">Enter valid Email</string>
    <string name="fill_fields">Fill empty fields</string>
    <string name="track_order">Track Order</string>
    <string name="my_wallet">My Wallet</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="menu_item">Menu item</string>
    <string name="my_profile">My Profile</string>
    <string name="my_post">My Post</string>
    <string name="about">About</string>
    <string name="my_cart">My Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">$ price</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_code">Security Code</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="add_your_card">Add your Card</string>
    <string name="add_location">Add location</string>
    <string name="add_your_address">Add your Address</string>
    <string name="floor_apartment">Floor/Apartment</string>
    <string name="complete_profile">Complete Profile</string>

</resources>