<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.completeInfo.CompleteInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.completeInfo.CompleteInfoFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/securityCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintHorizontal_weight="3"
            android:hint="@string/security_code"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/expDate"
            app:layout_constraintTop_toBottomOf="@+id/HolderName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/securityCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:paddingStart="0dp"
                android:textColor="@color/dark_gray"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/expiry_date"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@id/securityCode"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HolderName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expDateEditText"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:paddingStart="0dp"
                android:textColor="@color/dark_gray"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CardNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/card_number"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CardNumEditText"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:inputType="number"
                android:paddingStart="0dp"
                android:textColor="@color/dark_gray"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/HolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/card_holder_name"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CardNum">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/HolderNameEditText"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:paddingStart="0dp"
                android:textColor="@color/dark_gray"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="115dp"
            app:srcCompat="@drawable/ic_profile_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:text="@string/upload_profile_picture"
            android:textColor="@color/main_color"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/profilePic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/choose_photo"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/add_your_card"
            android:textColor="@color/main_color"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/addLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/add_location"
            android:textColor="@color/main_color"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expDate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressTi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/add_your_address"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:paddingStart="0dp"
                android:textColor="@color/dark_gray"
                android:drawableEnd="@drawable/ic_location"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <fragment
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressTi" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/floor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/floor_apartment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/floorAppartEditText"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:paddingStart="0dp"
                android:textColor="@color/dark_gray"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/CompleteButton"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/custom_button"
            android:text="@string/complete_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/floor" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>